# kafkit

./: .gitignore  AGENTS.md  BROWSER_PREVIEW.md  BUILD_DESKTOP.sh  BUILD_FINAL.md  BUILD_STATUS.md  CHANGELOG.md  DELIVERABLES.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION.md  MULTI_PLATFORM_BUILD.md  QUICK_START.md  README.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.0.4_CN.md  TEST_REPORT.md  TEST_SUMMARY.md  USER_GUIDE.md  V1.0.3_IMPLEMENTATION_STATUS.md  V1.0.3_ROADMAP.md  V1.0.4_DESIGN.md  V1.0.4_IMPLEMENTATION_STATUS.md  V1.0.4_README.md  V1.0.5_ROADMAP.md  build-desktop.sh  build-electron.sh
.github/workflows/: build.yml  release.yml
docker/kafka-auth/: README.md  docker-compose.yml  kafka_server_jaas.conf
docker/kafka-sasl/: README.md  docker-compose.yml  kafka_server_jaas.conf  zookeeper_jaas.conf
docker/kafka-ssl/: README.md  docker-compose.yml  init-scram.sh  kafka_server_jaas.conf  setup.sh  test.sh
docs/: DELIVERY-v1.0.6.md  SRS-v1.0.6.md  SRS-v1.0.md  SRS_v1.0.5_ScriptMode.md  TDD-v1.0.6.md  TDD-v1.0.md  TDD_v1.0.5_ScriptMode.md  TEST_SCHEMA_FORMATS.md
kafkit/: .gitignore  CHANGELOG.md  README.md  TEST_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
kafkit/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.desktop.conf.json
kafkit/src-tauri/capabilities/: default.json
kafkit/src-tauri/icons/: icon.icns
kafkit/src-tauri/src/: commands.rs  connection_pool.rs  lib.rs  main.rs  models.rs  models_tests.rs  services.rs  services_tests.rs  store.rs  store_tests.rs
(+142 files in other folders)
